<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/logon1_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_username_box"
        android:entries="@array/t_s_type"
        android:gravity="center"
        android:hint="@string/TYPE"
        android:padding="15dp"
        android:spinnerMode="dropdown"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white" />

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/logon1_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_username_box"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/ACCOUNT"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        app:emptyErrorString="@string/CANNOT_BE_NULL" />

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/logon1_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_username_box"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/PASSWORD"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        app:emptyErrorString="@string/CANNOT_BE_NULL" />

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/logon1_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_username_box"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/REPEAT_PASSWORD"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        app:emptyErrorString="@string/CANNOT_BE_NULL" />

    <Button
        android:id="@+id/logon1_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_login_button"
        android:padding="15dp"
        android:shadowColor="@android:color/transparent"
        android:text="@string/LOGON" />


</LinearLayout>