<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:paddingTop="?attr/actionBarSize">

    <Button
        android:id="@+id/returnButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/ic_keyboard_arrow_left_white_24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">


        <com.andreabaccega.widget.FormEditText
            android:id="@+id/old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_username_box"
            android:drawableStart="@drawable/ic_lock_open_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/OLD_PASSWORD"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            app:emptyErrorString="@string/CANNOT_BE_NULL" />

        <com.andreabaccega.widget.FormEditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_username_box"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/NEW_PASSWORD"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            app:emptyErrorString="@string/CANNOT_BE_NULL" />

        <com.andreabaccega.widget.FormEditText
            android:id="@+id/repeated_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_username_box"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/REPEAT_PASSWORD"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            app:emptyErrorString="@string/CANNOT_BE_NULL" />

        <Button
            android:id="@+id/reset_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_login_button"
            android:padding="15dp"
            android:shadowColor="@android:color/transparent"
            android:text="@string/RESET_PASSWORD" />


    </LinearLayout>
</RelativeLayout>