<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">


    <com.andreabaccega.widget.FormEditText
        app:testType="regexp"
        app:customRegexp="^[0-9]*$"
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_username_box"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/ACCOUNT"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:autofillHints="" />




    <com.andreabaccega.widget.FormEditText
        app:testType="regexp"
        app:customRegexp="^[0-9]*$"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shape_username_box"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/PASSWORD"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorHighlight="@color/white" />

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal">-->

    <!--        <CheckBox-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="Remember Me"-->
    <!--            android:layout_marginRight="10dp"-->
    <!--            android:layout_marginLeft="10dp"-->
    <!--            android:layout_marginBottom="10dp"-->
    <!--            android:layout_marginTop="0dp"-->
    <!--            android:textColor="@color/white"-->
    <!--            android:buttonTint="@color/white"-->
    <!--            android:checked="true"/>-->
    <!--        <TextView-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="@string/FORGET_PASSWORD"-->
    <!--            android:layout_marginRight="10dp"-->
    <!--            android:layout_marginLeft="10dp"-->
    <!--            android:layout_marginBottom="10dp"-->
    <!--            android:layout_marginTop="0dp"-->
    <!--            android:textColor="@color/white"-->
    <!--            android:drawableLeft="@drawable/ic_lock_open_black_24dp"-->
    <!--            android:drawablePadding="6dp"-->
    <!--            android:padding="4dp"/>-->
    <!--    </LinearLayout>-->

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_login_button"
        android:padding="15dp"
        android:shadowColor="@android:color/transparent"
        android:text="@string/LOGIN" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_lock_open_black_24dp"
            android:drawablePadding="6dp"
            android:padding="4dp"
            android:shadowColor="@android:color/transparent"
            android:background="@android:color/transparent"
            android:text="@string/FORGET_PASSWORD"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/logon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_person_outline_black_24dp"
            android:drawablePadding="6dp"
            android:padding="4dp"
            android:layout_alignParentRight="true"
            android:shadowColor="@android:color/transparent"
            android:text="@string/LOGON"
            android:textColor="@android:color/black" />
    </RelativeLayout>


</LinearLayout>